# hardcore-snake

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
src/: board.rs  config.rs  direction.rs  game.rs  main.rs  maze.rs  point.rs  snake.rs  terminal_handler.rs
